fix: league animation on mobile

--- a/src/components/Games/HeaderLeagues/HeaderLeagues.module.scss
+++ b/src/components/Games/HeaderLeagues/HeaderLeagues.module.scss
@@ -78,7 +78,7 @@
   justify-content: center;
   text-align: center;
   position: relative;
-  transition: all var(--transition-speed);
+  // transition: all var(--transition-speed);
   border-bottom: 0.5px solid #dfdfdf;
   border-right: 0.5px solid #dfdfdf;
 
